--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {
     "@types/jest": "~25.1.2",
-    "@types/node": "~12.12.27",
+    "@types/node": "^12.12.28",
     "@typescript-eslint/eslint-plugin": "~2.19.2",
     "@typescript-eslint/parser": "~2.19.2",
     "eslint": "~6.8.0",
@@ -31,6 +31,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "csv-parse": "^4.8.6",
+    "rxjs": "^6.5.4",
+    "rxjs-stream": "^3.1.1",
     "tslib": "~1.10.0"
   }
 }
