--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": ">= 12.13 <13"
   },
   "devDependencies": {
+    "@types/country-list": "^2.1.0",
     "@types/jest": "~25.1.2",
     "@types/node": "^12.12.28",
     "@typescript-eslint/eslint-plugin": "~2.19.2",
@@ -31,7 +32,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "country-list": "^2.2.0",
+    "country-mapper": "^1.2.1",
     "csv-parse": "^4.8.6",
+    "fp-ts": "^2.5.2",
+    "ordo-ab-chao": "github:kyusu/ordo-ab-chao",
     "rxjs": "^6.5.4",
     "rxjs-stream": "^3.1.1",
     "tslib": "~1.10.0"
