--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/country-list": "^2.1.0",
     "@types/jest": "~25.1.2",
     "@types/node": "^12.12.28",
+    "@types/object-hash": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "~2.19.2",
     "@typescript-eslint/parser": "~2.19.2",
     "eslint": "~6.8.0",
@@ -36,6 +37,7 @@
     "country-mapper": "^1.2.1",
     "csv-parse": "^4.8.6",
     "fp-ts": "^2.5.2",
+    "object-hash": "^2.0.3",
     "ordo-ab-chao": "github:kyusu/ordo-ab-chao",
     "rxjs": "^6.5.4",
     "rxjs-stream": "^3.1.1",
