--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "~25.1.2",
     "@types/node": "^12.12.28",
     "@types/object-hash": "^1.3.1",
+    "@types/ramda": "^0.27.3",
     "@typescript-eslint/eslint-plugin": "~2.19.2",
     "@typescript-eslint/parser": "~2.19.2",
     "eslint": "~6.8.0",
@@ -39,6 +40,7 @@
     "fp-ts": "^2.5.2",
     "object-hash": "^2.0.3",
     "ordo-ab-chao": "github:kyusu/ordo-ab-chao",
+    "ramda": "^0.27.0",
     "rxjs": "^6.5.4",
     "rxjs-stream": "^3.1.1",
     "tslib": "~1.10.0"
