--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {
     "@types/country-list": "^2.1.0",
-    "@types/jest": "~25.1.2",
+    "@types/jest": "^25.2.1",
     "@types/node": "^12.12.28",
     "@types/object-hash": "^1.3.1",
     "@types/ramda": "^0.27.3",
@@ -16,10 +16,11 @@
     "eslint": "~6.8.0",
     "eslint-config-prettier": "~6.10.0",
     "eslint-plugin-jest": "~23.7.0",
-    "jest": "~25.1.0",
+    "factoree": "^0.1.0",
+    "jest": "^25.5.4",
     "prettier": "~1.19.1",
     "rimraf": "~3.0.2",
-    "ts-jest": "~25.2.0",
+    "ts-jest": "^25.4.0",
     "tsutils": "~3.17.0",
     "typescript": "~3.8.2"
   },
