--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@types/node": "^12.12.28",
     "@types/object-hash": "^1.3.1",
     "@types/ramda": "^0.27.3",
-    "@typescript-eslint/eslint-plugin": "~2.19.2",
-    "@typescript-eslint/parser": "~2.19.2",
-    "eslint": "~6.8.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "eslint": "~7.5.0",
     "eslint-config-prettier": "~6.10.0",
     "eslint-plugin-jest": "~23.7.0",
     "factoree": "^0.1.0",
