Add package rule for major updates

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,10 @@
     "config:base"
   ],
   "packageRules": [
+     {
+      "updateTypes": ["major"],
+      "automerge": false
+    },
     {
       "updateTypes": ["minor", "patch", "pin", "digest"],
       "automerge": true
