--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@kyusu/ordo-ab-chao": "github:kyusu/ordo-ab-chao",
     "country-list": "2.2.0",
     "country-mapper": "1.2.1",
     "csv-parse": "4.15.1",
     "fp-ts": "2.9.5",
     "object-hash": "2.1.1",
-    "ordo-ab-chao": "github:kyusu/ordo-ab-chao",
     "ramda": "0.27.1",
     "rxjs": "6.6.3",
     "rxjs-stream": "3.2.1",
