--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "engines": {
-    "node": ">= 12.13 <17"
+    "node": ">= 14"
   },
   "devDependencies": {
     "@types/country-list": "2.1.1",
